--- a/.gitmodules
+++ b/.gitmodules
@@ -85,6 +85,9 @@
 [submodule "Vundle.vim"]
 	path = vim/bundle/Vundle.vim
     url = https://github.com/gmarik/Vundle.vim.git
-[submodule "vim/bundle/Align"]
+[submodule "Align"]
 	path = vim/bundle/Align
 	url = https://github.com/vim-scripts/Align.git
+[submodule "jedi-vim"]
+	path = vim/bundle/jedi-vim
+    url = https://github.com/davidhalter/jedi-vim
