--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -16,6 +16,7 @@
     ~/.vimrc.first: vimrc/vimrc.first
     ~/.vimrc.last: vimrc/vimrc.last
     ~/.vimrc.plugins: vimrc/vimrc.plugins
+    ~/.tmux.conf: tmux.conf
 
 - shell:
       - [git submodule update --init --recursive, Installing submodules]
