Add config options from svetlyak40wt/dot-tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,19 @@
-# remap prefix to Control + a
-set -g prefix C-a
-# bind 'C-a C-a' to type 'C-a'
-bind C-a send-prefix
-unbind C-b
+setw -g utf8 on
+setw -g aggressive-resize off
+setw -g mode-keys vi
+
+# colorfull terminal
+set -g default-terminal "screen-256color"
+
+# to show session's name in the terminal's tab
+set -g set-titles on
+set -g set-titles-string "#S"
+
+# set a bigger status length to allow bigger session names
+
+set -g status-left-length 20
+
+# rebind prefix from Ctrl-b to Ctrl-q
+unbind-key C-b
+set-option -g prefix C-q
+bind-key C-q send-prefix
