--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -17,6 +17,10 @@
     ~/.vimrc.last: vimrc/vimrc.last
     ~/.vimrc.plugins: vimrc/vimrc.plugins
     ~/.tmux.conf: tmux.conf
+    ~/.spectrum: spectrumyzer/spectrumyzer.py 
+    ~/.spectrum.conf: spectrum.conf
+    # Awesome WM
+    ~/.config/awesome: awesome
 
 - shell:
       - [git submodule update --init --recursive, Installing submodules]
