Add missing entries

--- a/.gitmodules
+++ b/.gitmodules
@@ -96,4 +96,10 @@
 	url = https://github.com/HaCk3Dq/spectrumyzer/
 [submodule "awesome/treesome"]
 	path = awesome/treesome
-	url = https://github.com/RobSis/treesome
+    url = https://github.com/RobSis/treesome
+[submodule "awesome/awesome-copycats"]
+	path = awesome/awesome-copycats
+    url = https://github.com/copycat-killer/awesome-copycats 
+[submodule "awesome/lain"]
+	path = awesome/lain
+	url = https://github.com/copycat-killer/lain 
