--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -17,6 +17,10 @@
     ~/.vimrc.last: vimrc/vimrc.last
     ~/.vimrc.plugins: vimrc/vimrc.plugins
     ~/.tmux.conf: tmux.conf
+    ~/.config/awesome: awesome
+    ~/.weechat/weechat.conf: weechat/weechat.conf
+    ~/.rainbow_config.json: rainbow/rainbow_config.json
+    ~/.rainbow_oauth: rainbow/rainbow_oauth
 
 - shell:
       - [git submodule update --init --recursive, Installing submodules]
